--- a/less/style.less
+++ b/less/style.less
@@ -1,10 +1,20 @@
+/*
+ * Boilerplate Bootstrap Styling
+ *
+ * basic less template file including Twitter Bootstrap
+ *
+ */
+
+
+/* ==========================================================================
+   Bootstrap imports
+   - http://twitter.github.com/bootstrap/
+   ========================================================================== */
+
 @import "bootstrap/bootstrap.less";
 @import "bootstrap/responsive.less";
 
-/* ==|== Primary Styles =====================================================
-       Author: Tim Albert [t.albert@neu.edu]
-      Project: +Project Title+
-   Start Date: 10/12/12
- Release Date: --TBD--
-Last Modified: 10/17/12
-========================================================================== */
+
+/* ==========================================================================
+   Vendor Imports
+   ========================================================================== */
